--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Countries</title>
+    <title>Countries Flags</title>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   </head>
 
